# hyperplane

./: README.md  install-rust.sh  netlify.toml  package-lock.json  package.json
core/: Cargo.toml
core/src/: dataset.rs  lib.rs  perceptron.rs  structs.rs  utils.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
