[package]
name = "hyperplane-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Jatin Mehta"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = "0.5.5"
wasm-bindgen = "0.2"
